# hacksx

./: .gitignore  CMakeLists.txt  README.md  filereader.c  main.c  parser.c  parser.h  tiled.c  tiled.h
header/: AssetManager.h  BgHandler.h  CdReader.h  FileReader.h  FntLogger.h  Font.h  Frames.h  GPUBase.h  GameObject.h  JSONParser.h  LinkedListTutorial.h  Logger.h  Map.h  MemUtils.h  MissingTypes.h  MockPSXTypes.h  SoundEffect.h  StrUtils.h  TextBox.h  TileFetcher.h  Tiled.h  Timer.h  TxtHandler.h  Types.h  Utils.h
psyq/: LIBDS.c  LIBDS.h  LIBETC.h  LIBGPU.h  LIBGS.h  LIBGTE.h  LIBSPU.h  MockPSXTypes.c  about.txt
psyq/SYS/: TYPES.h
res/: 04.json  05.json  06.json  0_0.json  0_1.json  100i0.json  1_0.json  1_1.json  1_TUN.json  1_h2.json  TS_8B.tim  TS_8HOUSE.tim  sandbox.json  sandbox.tmx  ts8_bl.json  ts8_br.json  ts8_in1.json  ts8_in1.tim  ts8_in2.json  ts8_in2.tim  ts8_in3.json  ts8_tl.json  ts8_tr.json
source/: AssetManager.c  CdReader.c  FileReader.c  Font.c  Frames.c  GPUBase.c  GameObject.c  JSONParser.c  LinkedListTutorial.c  Logger.c  Main.c  Map.c  MockPSXTypes.c  TextBox.c  TileFetcher.c  Tiled.c  Timer.c  TxtHandler.c  filereader.c  main.c  parser.c  tiled.c
